refactor: remove redundant Response fields
